add logging config, and User interactions

--- a/src/main/resources/templates/schedule/schedule-list.html
+++ b/src/main/resources/templates/schedule/schedule-list.html
@@ -75,7 +75,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 				<table class="table table-hover">
 					<thead>
 						<tr> 
-							<th>#</th> <th>Entry</th><th>Schedule</th> <th>Status</th><th>Action</th> 
+							<th>#</th> <th>Schedule For</th><th>Status</th><th>Action</th> 
 						</tr>
 					</thead>
 					<tbody> 
@@ -84,8 +84,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 							<th scope="row">1</th> 
 							<td></td>
 							<!-- <td th:text="${block.entry}">January 2018</td> --> 
-							<td th:text="${schedule.entry}">March 2018</td> 
-							<td th:text="${schedule.name}">2</td>
+							<td th:text="${schedule.entry}">March 2018</td>
 							<td th:text="${schedule.status}">Draft</td>
 							<td><a th:href="@{'/schedules/'+${schedule.id}+'?update=1'}">Update</a> | 
 							<a th:href="@{'/schedules/'+${schedule.id}+'?update=0'}">Delete</a></td>
