--- a/src/main/resources/templates/schedule/schedule-form.html
+++ b/src/main/resources/templates/schedule/schedule-form.html
@@ -64,55 +64,44 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 		<div class="row">
 			<!--<div class="col-sm-6 col-md-4 col-md-offset-4">-->
 			<div class="span4 offset4 well">
-				<form action="#" th:action="@{/sections}" th:object="${section}" method="post">
+				<form action="#" th:action="@{/schedule}" th:object="${schedule}" method="post">
 				  <div class="form-group">
-				    <label for="course">Course:</label>
-				    <select th:field="*{course}" class="form-control" id="course">
-				      <option value="">-- Select a course --</option>
+				    <label for="entry">Entry:</label>
+				    <select th:field="*{entry}" class="form-control" id="entry">
+				      <option value="">-- Select an entry --</option>
 				      <option
-				      	th:each="course: ${allCourses}" 
-				      	th:value="${course.id}"
-				      	th:text="${course.name}">Machine Learning</option>
+				      	th:each="entry: ${allEntries}" 
+				      	th:value="${entry.id}"
+				      	th:text="${entry}">Machine Learning</option>
 				    </select>
 				  </div>
 				  <div class="form-group">
-				    <label for="block">Block:</label>
-				    <select th:field="*{block}" class="form-control" id="block">
-				      <option value="">-- Select a block --</option>
+				    <label for="blocks">Blocks:</label>
+				    <select th:field="*{blocks}" multiple="multiple" class="form-control" id="blocks">
+				      <option value="">-- Select blocks --</option>
 				      <option
-				      	th:each="blok: ${allBlocks}" 
-				      	th:value="${blok.id}"
-				      	th:text="${blok}">January 2018 - 2018-01-15</option>
-				    </select>
-				  </div>
-				  <div class="form-group">
-				    <label for="faculty">Faculty:</label>
-				    <select th:field="*{faculty}" class="form-control" id="faculty">
-				      <option value="">-- Select a faculty --</option>
-				      <option
-				      	th:each="faculty: ${allFaculty}" 
-				      	th:value="${faculty.id}"
-				      	th:text="${faculty.name}">Sovello Hildebrand</option>
+				      	th:each="block: ${allBlocks}" 
+				      	th:value="${block.id}"
+				      	th:text="${block}">January 2018 - 2018-01-15</option>
 				    </select>
 				  </div>
 				  <th:block th:if="${id != null}">
 				  	<input type="hidden" th:field="*{id}" />
 				  </th:block>
 				  <div class="form-group">
-				    <label for="enrolledStudents">Enrolled Students</label>
-				    <input type="text" th:field="*{enrolledStudents}" class="form-control" id="enrolledStudents" placeholder="30" />
-				    <div class="help-block with-errors" th:if="${#fields.hasErrors('enrolledStudents')}" th:errors="*{enrolledStudents}"></div>
+				    <label for="block">Status:</label>
+				    <select th:field="*{status}" class="form-control" id="status">
+				      <option value="">-- Select Status --</option>
+				      <option 
+				      th:each="status : ${T(com.mumscheduler.schedule.model.ScheduleStatus).values()}" 
+				      th:value="${status}" 
+				      th:text="${status}">DRAFT</option>
+				    </select>
 				  </div>
-				  <div class="form-group">
-				    <label for="sectionNumber">Section number</label>
-				    <div class='input-group date'>
-					    <input type="text" readonly="readonly" th:field="*{sectionNumber}" class="form-control" id="sectionNumber" placeholder="1" />
-					    <div class="help-block with-errors" th:if="${#fields.hasErrors('sectionNumber')}" th:errors="*{sectionNumber}"></div>
-					</div>
-				  </div>
+				  
 				  <div class="form-group text-right">
 				  	<label for="submitButton">
-				  		<a th:href="@{/sections}"><button type="button" class="btn btn-default btn-group">Cancel</button></a>
+				  		<a th:href="@{/schedule}"><button type="button" class="btn btn-default btn-group">Cancel</button></a>
 				  		<button type="submit" class="btn btn-default btn-group">Save</button>
 				  	</label>
 				  </div>
