--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" 
 xmlns:th="http://www.thymeleaf.org" 
-xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 
 	<head>
 		<meta charset="utf-8" />
@@ -9,7 +9,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 		<meta name="MUM Scheduler Application" content="" />
 		<meta name="Sovello" content="" />
 		
-		<title>MUMSched :: Home</title>
+		<title th:text="#{index.title}">MUMSched</title>
 		
 		<!-- Bootstrap core CSS -->
 		<link th:href="@{/standard/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
@@ -43,24 +43,15 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	      	<th:block sec:authorize="isAuthenticated()">
-	      	<li><a th:href="@{/dashboard}">[Dashboard]</a></li>
-	      	<li><a th:href="@{/entries}">[Entries]</a></li>
-	      	<li><a th:href="@{/blocks}">[Blocks]</a></li>
-	      	<li><a th:href="@{/courses}">[Courses]</a></li>
-	      	<li><a th:href="@{/faculty}">[Faculty]</a></li>
-	      	<li><a th:href="@{/dashboard}">[Sections]</a></li>
-	      	<li><a th:href="@{/dashboard}">[Schedules]</a></li>
-	      	</th:block>
-	      	<li><a th:href="@{/login}">Login</a></li>
-	      	<li><a th:href="@{/home}">Home</a></li>
+	      	<li><a th:href="@{/login}" th:text="#{login}">Login</a></li>
+	      	<li><a th:href="@{/home}" th:text="#{home}">Home</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
 	          role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-	            <li class="active"><a href="">Home<span class="sr-only">(current)</span></a></li>
+	            <li class="active"><a th:href="@{/#}" th:text="#{home}">Home<span class="sr-only">(current)</span></a></li>
 		        <li role="separator" class="divider"></li>
-		        <li><a th:href="@{/login}">Login</a></li>
+		        <li><a th:href="@{/login}" th:text="#{login}">Login</a></li>
 	          </ul>
 	        </li>
 	      </ul>
@@ -71,7 +62,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-6 col-md-4 col-md-offset-4">
-			    <p>Welcome to MUM Scheduler.</p>
+			    <p th:text="#{welcome}">Welcome</p>
 			</div>
 		</div>
 	</div>
