--- a/src/main/resources/templates/block/block-list.html
+++ b/src/main/resources/templates/block/block-list.html
@@ -1,135 +1,46 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" 
+<html layout:decorator="fragments/layout"
+xmlns="http://www.w3.org/1999/xhtml" 
 xmlns:th="http://www.thymeleaf.org" 
-xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="MUM Scheduler Application" content="" />
-		<meta name="Sovello" content="" />
-		
-		<title>MUMSched :: Home</title>
-		
-		<!-- Bootstrap core CSS -->
-		<link th:href="@{/standard/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
-		
-		<!-- Custom fonts for this template -->
-		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet" />
-		<link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-		<link th:href="@{/standard/font-awesome/css/font-awesome.min.css}" rel="stylesheet" />
-		
-		<!-- Custom styles for this template -->
-		<link th:href="@{/css/mumsched.css}" rel="stylesheet" />
+		<title th:text="#{index.title}">MUMSched</title>
 	</head>
 
 	<body>
-		<div class="overlay"></div>
-	
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" 
-	      data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" th:href="@{/home}">MUM</a>
-	    </div>
-	
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-	      	<th:block sec:authorize="isAuthenticated()">
-	      	<li th:class="${activeTab == 'dashboard'} ? 'active' : null"><a th:href="@{/dashboard}">[Dashboard]</a></li>
-	      	<li th:class="${activeTab == 'entries'} ? 'active' : null"><a th:href="@{/entries}">[Entries]</a></li>
-	      	<li th:class="${activeTab == 'blocks'} ? 'active' : null"><a th:href="@{/blocks}">[Blocks]</a></li>
-	      	<li th:class="${activeTab == 'courses'} ? 'active' : null"><a th:href="@{/courses}">[Courses]</a></li>
-	      	<li th:class="${activeTab == 'faculty'} ? 'active' : null"><a th:href="@{/faculty}">[Faculty]</a></li>
-	      	<li th:class="${activeTab == 'sections'} ? 'active' : null"><a th:href="@{/sections}">[Sections]</a></li>
-	      	<li th:class="${activeTab == 'schedules'} ? 'active' : null"><a th:href="@{/schedules}">[Schedules]</a></li>
-	      	</th:block>
-	      	<li><a th:href="@{/home}">Home</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
-	          role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li class="active"><a href="">Home<span class="sr-only">(current)</span></a></li>
-		        <li role="separator" class="divider"></li>
-		        <th:block sec:authorize="isAuthenticated()">
-		        <li><a th:href="@{/logout}">Logout</a></li>
-		        </th:block>
-	          </ul>
-	        </li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
-	
-	<div class="container">
-		<div class="row well">
-			<div class="col-md-9">
-				<table class="table table-hover">
-					<thead>
-						<tr> 
-							<th>#</th> <th>Entry</th><th>Block Name</th> <th>Block Number</th> 
-							<th>Start Date</th><th>End Date</th><th>Action</th> 
-						</tr>
-					</thead>
-					<tbody> 
-						<th:block th:each="block : ${blocks}">
-						<tr> 
-							<th scope="row">1</th> 
-							<td></td>
-							<!-- <td th:text="${block.entry}">January 2018</td> --> 
-							<td th:text="${block.name}">March 2018</td> 
-							<td th:text="${block.serial}">2</td>
-							<td th:text="${block.startdate}">February 26, 2018</td>
-							<td th:text="${block.enddate}">March 23, 2018</td>
-							<td><a th:href="@{'/blocks/'+${block.id}+'?update=1'}">Update</a> | 
-							<a th:href="@{'/blocks/'+${block.id}+'?update=0'}">Delete</a></td>
-						</tr>
-						</th:block>
-					</tbody>
-				</table>    
+		<th:block layout:fragment="content">
+			<div class="container">
+				<div class="row well">
+					<div class="col-md-9">
+						<table class="table table-hover">
+							<thead>
+								<tr> 
+									<th>#</th><th>Block Name</th> <th>Block Number</th> 
+									<th>Start Date</th><th>End Date</th><th>Action</th> 
+								</tr>
+							</thead>
+							<tbody> 
+								<th:block th:each="block, idx : ${blocks}">
+								<tr> 
+									<th scope="row" th:text="${idx.count}">1</th>
+									<td th:text="${block.name}">March 2018</td> 
+									<td th:text="${block.serial}">2</td>
+									<td th:text="${block.startdate}">February 26, 2018</td>
+									<td th:text="${block.enddate}">March 23, 2018</td>
+									<td><a th:href="@{'/blocks/'+${block.id}+'?update=1'}">Update</a> | 
+									<a th:href="@{'/blocks/'+${block.id}+'?update=0'}">Delete</a> | 
+									<a th:href="@{'/blocks/'+${block.id}+'/profile'}">View Block</a></td>
+								</tr>
+								</th:block>
+							</tbody>
+						</table>    
+					</div>
+					<div class="col-md-3">
+						<p><a th:href="@{/blocks/new}">Create a new Block</a></p>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-3">
-				<p><a th:href="@{/blocks/new}">Create a new Block</a></p>
-			</div>
-		</div>
-	</div>
-	<div class="social-icons">
-		<ul class="list-unstyled text-center mb-0">
-			<li class="list-unstyled-item">
-				<a href="#">
-					<i class="fa fa-twitter"></i>
-				</a>
-			</li>
-			<li class="list-unstyled-item">
-				<a href="#">
-			    	<i class="fa fa-facebook"></i>
-			  	</a>
-			</li>
-			<li class="list-unstyled-item">
-			  	<a href="#">
-			    	<i class="fa fa-instagram"></i>
-			  	</a>
-			</li>
-		</ul>
-	</div>
-	
-		<!-- Bootstrap core JavaScript -->
-		<script th:src="@{/standard/jquery/jquery.min.js}"></script>
-		<script th:src="@{/standard/bootstrap/js/bootstrap.min.js}"></script>
-		
-		<!-- Plugin JavaScript -->
-		<script th:src="@{/standard/vide/jquery.vide.min.js}"></script>
-		
-		<!-- Custom scripts for this template -->
-		<script th:src="@{/js/mumsched.js}"></script>
-	
+		</th:block>
 	</body>
 </html>
