--- a/src/main/resources/templates/student/student-list.html
+++ b/src/main/resources/templates/student/student-list.html
@@ -9,6 +9,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 	</head>
 
 	<body>
+
 		<th:block layout:fragment="content">
 			<div class="container">
 				<div class="row well">
@@ -16,27 +17,26 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 						<table class="table table-hover">
 							<thead>
 								<tr> 
-									<th>#</th> <th>Course Code</th> <th>Course Level</th> <th>Course Name</th><th>Maximum Capacity</th><th>Action</th> 
+									<th>#</th> <th>First name</th> <th>Last name</th> <th>Email</th><th>Action</th> 
 								</tr>
 							</thead>
-							<tbody>
-								<th:block th:each="course, idx : ${courses}">
+							<tbody> 
+								<th:block th:each="student, idx : ${students}">
 								<tr> 
 									<th scope="row" th:text="${idx.count}">1</th> 
-									<td th:text="${course.code}">SW</td> 
-									<td th:text="${course.level}">425</td> 
-									<td th:text="${course.name}">Software Engineering</td>
-									<td th:text="${course.capacity}">25</td>
-									<td><a th:href="@{'/courses/'+${course.id}+'?update=1'}">Update</a> | 
-									<a th:href="@{'/courses/'+${course.id}+'?update=0'}">Delete</a> | 
-									<a th:href="@{'/courses/'+${course.id}+'/profile'}">View Profile</a></td>
+									<td th:text="${student.firstname}">Sovello</td> 
+									<td th:text="${student.lastname}">Hildebrand</td> 
+									<td th:text="${student.email}">shildebrand@mumsched.tao</td>
+									<td><a th:href="@{'/students/'+${student.id}+'?update=1'}">Update</a> | 
+									<a th:href="@{'/students/'+${student.id}+'?update=0'}">Delete</a> | 
+									<a th:href="@{'/students/'+${student.id}+'/profile'}">View Student Profile</a></td>
 								</tr>
 								</th:block>
 							</tbody>
 						</table>    
 					</div>
 					<div class="col-md-3">
-						<p><a th:href="@{/courses/new}">Create a new Course</a></p>
+						<p><a th:href="@{/students/new}">Create Student Profile</a></p>
 					</div>
 				</div>
 			</div>
