--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,134 +1,47 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" 
-xmlns:th="http://www.thymeleaf.org" 
-xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
+<html layout:decorator="fragments/layout"
+	xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:th="http://www.thymeleaf.org" 
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="MUM Scheduler Application" content="" />
-		<meta name="Sovello" content="" />
-		
-		<title>MUMSched :: Home</title>
-		
-		<!-- Bootstrap core CSS -->
-		<link th:href="@{/standard/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
-		
-		<!-- Custom fonts for this template -->
-		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet" />
-		<link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-		<link th:href="@{/standard/font-awesome/css/font-awesome.min.css}" rel="stylesheet" />
-		
-		<!-- Custom styles for this template -->
-		<link th:href="@{/css/mumsched.css}" rel="stylesheet" />
+		<title th:text="#{index.title}">MUMSched</title>
 	</head>
-
 	<body>
-		<div class="overlay"></div>
-	
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" 
-	      data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" th:href="@{/home}">MUM</a>
-	    </div>
-	
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-	      	<th:block sec:authorize="isAuthenticated()">
-	      	<li><a th:href="@{/dashboard}">[Dashboard]</a></li>
-	      	<li><a th:href="@{/entries}">[Entries]</a></li>
-	      	<li><a th:href="@{/blocks}">[Blocks]</a></li>
-	      	<li><a th:href="@{/courses}">[Courses]</a></li>
-	      	<li><a th:href="@{/faculty}">[Faculty]</a></li>
-	      	<li><a th:href="@{/dashboard}">[Sections]</a></li>
-	      	<li><a th:href="@{/dashboard}">[Schedules]</a></li>
-	      	</th:block>
-	      	<li><a th:href="@{/login}">Login</a></li>
-	      	<li><a th:href="@{/home}">Home</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
-	          role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li class="active"><a href="">Home<span class="sr-only">(current)</span></a></li>
-		        <li role="separator" class="divider"></li>
-		        <li><a th:href="@{/login}">Login</a></li>
-	          </ul>
-	        </li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
-	
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-6 col-md-4 col-md-offset-4">
-			    
-				<div th:if="${param.logout}">
-				    <h1 style="color:blue">Logged out.</h1>
-				</div>
-				<h1 class="text-center login-title">MUMSched</h1>
-				<div class="account-wall">
-					<div th:if="${param.error}">
-						<div class="alert alert-error">
-			                <a class="close" data-dismiss="alert" href="#">×</a>Incorrect Username or Password!
-			            </div>
+
+		<th:block layout:fragment="content">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-md-4 col-md-offset-4">
+					    
+						<div th:if="${param.logout}">
+						    <h1 style="color:blue">Logged out.</h1>
+						</div>
+						<h1 class="text-center login-title">MUMSched</h1>
+						<div class="account-wall">
+							<div th:if="${param.error}">
+								<div class="alert alert-error">
+					                <a class="close" data-dismiss="alert" href="#">×</a>Incorrect Username or Password!
+					            </div>
+							</div>
+							<form class="form-signin" th:action="@{/login}" method="post">
+								<div class="form-group has-error">
+									<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+									<input type="text" name="username" class="form-control" placeholder="Email"  required="required" autofocus="autofocus"/>
+								</div>
+								<div class="form-group has-error">
+									<input type="password" name="password" class="form-control" placeholder="Password" required="required"/>
+								</div>
+								<div class="form-group">
+									<button class="btn btn-lg btn-primary btn-block" type="submit" >LOGIN</button>     
+								</div>
+								<a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
+							</form>
+						</div>
+						<!-- <a href="customerForm" class="text-center new-account">Or create a new account</a>  -->
 					</div>
-					<form class="form-signin" th:action="@{/login}" method="post">
-						<div class="form-group has-error">
-							<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-							<input type="text" name="username" class="form-control" placeholder="Email"  required="required" autofocus="autofocus"/>
-						</div>
-						<div class="form-group has-error">
-							<input type="password" name="password" class="form-control" placeholder="Password" required="required"/>
-						</div>
-						<div class="form-group">
-							<button class="btn btn-lg btn-primary btn-block" type="submit" >LOGIN</button>     
-						</div>
-						<a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
-					</form>
 				</div>
-				<!-- <a href="customerForm" class="text-center new-account">Or create a new account</a>  -->
 			</div>
-		</div>
-	</div>
-	<div class="social-icons">
-		<ul class="list-unstyled text-center mb-0">
-			<li class="list-unstyled-item">
-				<a href="#">
-					<i class="fa fa-twitter"></i>
-				</a>
-			</li>
-			<li class="list-unstyled-item">
-				<a href="#">
-			    	<i class="fa fa-facebook"></i>
-			  	</a>
-			</li>
-			<li class="list-unstyled-item">
-			  	<a href="#">
-			    	<i class="fa fa-instagram"></i>
-			  	</a>
-			</li>
-		</ul>
-	</div>
-	
-		<!-- Bootstrap core JavaScript -->
-		<script th:src="@{/standard/jquery/jquery.min.js}"></script>
-		<script th:src="@{/standard/bootstrap/js/bootstrap.min.js}"></script>
-		
-		<!-- Plugin JavaScript -->
-		<script th:src="@{/standard/vide/jquery.vide.min.js}"></script>
-		
-		<!-- Custom scripts for this template -->
-		<script th:src="@{/js/mumsched.js}"></script>
-	
+		</th:block>
 	</body>
 </html>
