--- a/src/main/resources/templates/entry/entry-form.html
+++ b/src/main/resources/templates/entry/entry-form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" 
-xmlns:th="http://www.thymeleaf.org" 
-xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
+	xmlns:th="http://www.thymeleaf.org" 
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 
 	<head>
 		<meta charset="utf-8" />
@@ -18,14 +18,31 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
 		<link th:href="@{/standard/font-awesome/css/font-awesome.min.css}" rel="stylesheet" />
-		
+		<script th:src="@{/standard/jquery/jquery.min.js}"></script>
+		<link th:href="@{/standard/jquery/ui/jquery-ui.min.css}" rel="stylesheet" />
 		<!-- Custom styles for this template -->
 		<link th:href="@{/css/mumsched.css}" rel="stylesheet" />
+		<script th:inline="javascript">
+		
+		  $( function() {
+			    $( "#enddate" ).datepicker({
+			      changeMonth: true,
+			      changeYear: true,
+			      dateFormat: "yy-mm-dd"
+			    });
+			  } );
+		  $( function() {
+			    $( "#startdate" ).datepicker({
+			      changeMonth: true,
+			      changeYear: true,
+			      dateFormat: "yy-mm-dd"
+			    });
+			  } );
+		  </script>
 	</head>
 
 	<body>
 		<div class="overlay"></div>
-	
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,7 +60,16 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	      	<li><a th:href="@{/logout}">Logout</a></li>
+	      	<th:block sec:authorize="isAuthenticated()">
+	      	<li th:class="${activeTab == 'dashboard'} ? 'active' : null"><a th:href="@{/dashboard}">[Dashboard]</a></li>
+	      	<li th:class="${activeTab == 'courses'} ? 'active' : null"><a th:href="@{/courses}">[Courses]</a></li>
+	      	<li th:class="${activeTab == 'blocks'} ? 'active' : null"><a th:href="@{/blocks}">[Blocks]</a></li>
+	      	<li th:class="${activeTab == 'entries'} ? 'active' : null"><a th:href="@{/entries}">[Entries]</a></li>
+	      	<li th:class="${activeTab == 'sections'} ? 'active' : null"><a th:href="@{/sections}">[Sections]</a></li>
+	      	<li th:class="${activeTab == 'schedules'} ? 'active' : null"><a th:href="@{/schedules}">[Schedules]</a></li>
+	      	<li th:class="${activeTab == 'faculty'} ? 'active' : null"><a th:href="@{/faculty}">[Faculty]</a></li>
+	      	<li th:class="${activeTab == 'students'} ? 'active' : null"><a th:href="@{/students}">[Students]</a></li>
+	      	</th:block>
 	      	<li><a th:href="@{/home}">Home</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
@@ -51,14 +77,16 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 	          <ul class="dropdown-menu">
 	            <li class="active"><a href="">Home<span class="sr-only">(current)</span></a></li>
 		        <li role="separator" class="divider"></li>
+		        <th:block sec:authorize="isAuthenticated()">
 		        <li><a th:href="@{/logout}">Logout</a></li>
+		        </th:block>
+		        <li><a th:href="@{/login}">Login</a></li>
 	          </ul>
 	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
-	</nav>
-	
+	</nav>	
 	<div class="container">
 		<div class="row">
 			<!--<div class="col-sm-6 col-md-4 col-md-offset-4">-->
@@ -68,20 +96,46 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 				  	<input type="hidden" th:field="*{id}" />
 				  </th:block>
 				  <div class="form-group">
-				    <label for="month">Entry Month</label>
-				    <input type="text" th:field="*{month}" class="form-control" id="month" placeholder="January" />
+				    <label for="name">Name of Entry</label>
+				    <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="January Block" />
 				  </div>
 				  <div class="form-group">
-				    <label for="year">Entry Year</label>
-				    <input type="text" th:field="*{year}" class="form-control" id="year" placeholder="2018" />
+				    <label for="mppNumber">MPP Students</label>
+				    <input type="number" th:field="*{fppNumber}" class="form-control" id="mppNumber" placeholder="20" />
 				  </div>
 				  <div class="form-group">
-				    <label for="mppStudents">MPP Students</label>
-				    <input type="text" th:field="*{mppStudents}" class="form-control" id="mppStudents" placeholder="20" />
+				    <label for="fppNumber">FPP Students</label>
+				    <input type="number" th:field="*{fppNumber}" class="form-control" id="fppNumber" placeholder="36" />
 				  </div>
 				  <div class="form-group">
-				    <label for="fppStudents">FPP Students</label>
-				    <input type="text" th:field="*{fppStudents}" class="form-control" id="fppStudents" placeholder="36" />
+				    <label for="startDate">Start date</label>
+				    <div class='input-group date'>
+					    <input type="text" th:field="*{startdate}" class="form-control" id="startdate" placeholder="Set date" />
+					    <span class="input-group-addon">
+	                        <span class="glyphicon glyphicon-calendar"></span>
+	                    </span>
+					</div>
+					<div class="help-block with-errors" th:if="${#fields.hasErrors('startdate')}" th:errors="*{startdate}"></div>
+				  </div>
+				  <div class="form-group">
+				    <label for="endDate">End date</label>
+				   	<div class="input-group date">
+				   	 	<input type="text" th:field="*{enddate}" class="form-control" id="enddate" placeholder="Set date" />
+				    	<span class="input-group-addon">
+	                        <span class="glyphicon glyphicon-calendar"></span>
+	                    </span>
+	                </div>
+				    <div class="help-block with-errors" th:if="${#fields.hasErrors('enddate')}" th:errors="*{enddate}"></div>
+				  </div>
+				  <div class="form-group">
+				    <label for="blocks">Blocks:</label>
+				    <div class="help-block with-errors" th:if="${#fields.hasErrors('blocks')}" th:errors="*{blocks}"></div>
+				    <select th:field="*{blocks}" th:multiple="multiple" class="form-control" id="blocks">
+				      <option
+				      	th:each="block: ${allBlocks}" 
+				      	th:value="${block.id}"
+				      	th:text="${block}">Machine Learning</option>
+				    </select>
 				  </div>
 				  <div class="form-group text-right">
 				  	<label for="submitButton">
@@ -119,7 +173,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 		
 		<!-- Plugin JavaScript -->
 		<script th:src="@{/standard/vide/jquery.vide.min.js}"></script>
-		
+		<script th:src="@{/standard/jquery/ui/jquery-ui.min.js}"></script>
 		<!-- Custom scripts for this template -->
 		<script th:src="@{/js/mumsched.js}"></script>
 	
