--- a/src/main/resources/templates/section/section-form.html
+++ b/src/main/resources/templates/section/section-form.html
@@ -85,7 +85,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity" lang="en">
 				      <option
 				      	th:each="faculty: ${allFaculty}" 
 				      	th:value="${faculty.id}"
-				      	th:text="${faculty.name}">Sovello Hildebrand</option>
+				      	th:text="${faculty}">Sovello Hildebrand</option>
 				    </select>
 				  </div>
 				  <div class="form-group text-right">
